# qtftp

./: CMakeLists.txt
cmakeFindModules/: QFtpConfig.cmake
examples/: CMakeLists.txt
examples/qftp/: CMakeLists.txt
src/: CMakeLists.txt
src/QtFtp/: CMakeLists.txt
